Verify also instance method with all types